--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,20 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.1.4</version> <!-- latest stable version -->
         </dependency>
+        
+        <!-- JSTL API -->
+<dependency>
+    <groupId>jakarta.servlet.jsp.jstl</groupId>
+    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+    <version>3.0.0</version>
+</dependency>
+
+<dependency>
+    <groupId>org.glassfish.web</groupId>
+    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+    <version>3.0.0</version>
+</dependency>
+
     </dependencies>
     
     <build>
